--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-  
+
    <p style= "color: green"><%= notice %>
    <p style= "color: red"><%= alert %>
 
@@ -33,7 +33,8 @@
         <a href = "/characters">Characters</a>
       </li>
 
-      <%if session.fetch(:user_id) == nil%>
+      <%if @current_user == nil%>
+    
       <li>
         <a href = "/user_sign_up">Sign up</a>
       </li>
@@ -41,6 +42,9 @@
         <a href = "/user_sign_in">Sign in</a>
       </li>
       <%else %>
+       <li>
+        <a href = "/bookmarks">Bookmarks</a>
+      </li>
       <li>
         <a href = "/user_sign_out">Sign out</a>
       </li>
